@@ -3,6 +3,9 @@ Changes for the Labyrinth-Plugin-Album
         - aded hits dispatch and template files.
         - change file dates changed to meet W3CDTF standards.
         - updated test suite.
+        - META tests no longer require specific versions.
+        - added minimum perl version (5.006).
+        - reworked Makefile.PL for clarity.
 
 1.02	2012-01-25
 	    - allow config settings of maxphotowidth & maxphotoheight for photos, 
